# roosterize

./: .gitignore  CHANGELOG.md  LICENSE  Makefile  README.md  coq-roosterize.opam  package.sh  pretrain.sh  requirements.txt  roosterize.spec
conda-envs/: cpu.yml  gpu-cuda10.yml  gpu-cuda9.yml  mac-cpu.yml
configs/: ChopKnlTree+ChopSynTree+attn+copy.json  Stmt+ChopKnlTree+ChopSynTree+attn+copy.json  Stmt+ChopKnlTree+attn+copy.json  Stmt+ChopSynTree+attn+copy.json
dist-bin/: roosterize
docs/: example-suggestion.txt
onmt/: LICENSE.md
onmt/utils/: logging.py
roosterize/: Debug.py  Environment.py  FilesManager.py  Macros.py  Utils.py  __init__.py  main.py
roosterize/data/: CoqDocument.py  DataMiner.py  Definition.py  LanguageId.py  Lemma.py  LemmaBackendSexpTransformers.py  LemmaForeendSexpTransformers.py  ModelSpec.py  Token.py  TreeTransformation.py  TreeTransformer.py
roosterize/interface/: CommandLineInterface.py  RoosterizeDirUtils.py  VSCodeInterface.py  VSCodeServer.py
roosterize/ml/: MLModelBase.py  MLModels.py  MLModelsConsts.py
roosterize/parser/: CoqParser.py  ParserUtils.py  SexpAnalyzer.py  __init__.py
roosterize/sexp/: IllegalSexpOperationException.py  SexpList.py  SexpNode.py  SexpParser.py  SexpString.py  __init__.py
training/: allgroup-test.json  allgroup-val.json  lo-all.json  lo-test.json  lo-train.json  lo-val.json  projects.yml  t1-all.json  t1-test.json  t1-train.json  t1-val.json  t2-all.json  t2-test.json  t2-train.json  t2-val.json  t3-all.json  t3-test.json  t3-train.json  t3-val.json  ta-all.json  ta-train.json
(+24 files in other folders)
