opam-version: "2.0"
maintainer: "palmskog@gmail.com"
version: "dev"

homepage: "https://github.com/EngineeringSoftware/roosterize"
dev-repo: "git+https://github.com/EngineeringSoftware/roosterize.git"
bug-reports: "https://github.com/EngineeringSoftware/roosterize/issues"
license: "MIT"
synopsis: "Tool for suggesting lemma names in Coq verification projects"
description: """
Roosterize is a tool for suggesting lemma names in verification projects
that use the Coq proof assistant. The tool leverages neural networks that
take serialized Coq lemma statements and elaborated terms as input.
"""

depends: [
  "ocaml" {= "4.07.1"}
  "coq" {= "8.10.2"}
  "coq-serapi" {= "8.10.0+0.7.1"}
  "conf-python-3"
]

authors: [
  "Emilio Jesús Gallego Arias"
  "Milos Gligoric"
  "Junyi Jessy Li"
  "Pengyu Nie"
  "Karl Palmskog"
]
